FlightPath 5.x Changelog
========================

2019-02-15
  Adding ability to return plain txt instead of HTML in the advise_popup_display_summary function, so we can more easily email advising
  summaries to students.
  
  Added new settings to smtp module so we can more easily set the From address and name.
  

2019-02-11
  Minor change to remove "warning" on Count().
  
  Made it so that the "submit" button on the main advise form goes through hook_content_alter.  This is so the new email_events module can add
  a checkbox.
  
  Added a new hook, hook_save_advising_session_from_post, while lets other modules act after an advising session has been saved.
  

2019-12-17
  Fixed search by role on Users page. It was only recognizing the first selection, and not if you changed the role more than once.
  

2019-10-04
  Fixed display bug in _FlightPath.php, where if a student's catalog year was past the current_catalog_year, it was set to 99999.  This caused
  a message to display onscreen which read "Could not find degreee... in catalog year 99999-100000..."
  

2019-09-13
  Made it so legacy support for 4x style "concentrations" is DISABLED by default.  This is to help clear up confusion.  New
  language on the Add Degree form uses the new level-1, -2, and -3 terminology for consistency.
  
  Fixed a bug where previously-deleted tracks were showing as a blank degree_class to select from on the What If selection
  screen.  Make it simply where if the degree_class is blank, then skip over it.
  

2019-09-09
  Minor tweak to stop a warning from appearing.


2019-08-12
  Minor tweak in theme.inc, to fix menu icon bug which can happen sometimes.
  

2019-08-08
  But when adding new user; user isn't searchable.  Adding default lastname (username) if not entered.
  
  Fixed blocks module's administer_blocks permission.  Had typo preventing it from working.
  
  Updated format_date() function, so that the "short" format has am/pm at the end.
  

2019-08-07